--- a/data/css/styles.css
+++ b/data/css/styles.css
@@ -1,6 +1,6 @@
 body {
-    font-family: Poppins, sans-serif;
-    background: #1e1e2f;
+    font-family: Helvetica, sans-serif;
+    background: #1a1a1a;
     color: white;
     padding: 1em;
 }
@@ -12,12 +12,12 @@ body {
 }
 
 .card {
-    border-top: 1.5px solid #2296f3;
+    border-top: 2.5px solid #209cee;
     position: relative;
     min-height: 100px;
     width: 100%;
     margin-bottom: 30px;
-    background: #272a3d;
+    background: #242424;
     box-shadow: 0 1px 1em 0 rgb(0 0 0 / 20%);
 }
 
@@ -56,4 +56,7 @@ h1 {
     background-color: #343a40 !important;
 }
 
-
+.logo {
+    padding-bottom: 10px;
+    padding-right: 10px;
+}
